# stepic_fastapi

./: .gitignore  README.md  alembic.ini  api_1.py  api_2_validation.py  api_3_CRUD.py  api_4_pydentic.py  api_5_depends.py  celery_main.py  dummy.py  dump.rdb  logging_main.py  main.py  pyproject.toml  requirements.txt  test_project.db
app/: auth.py  database.py  db_depends.py  main.py  schemas.py
app/migration/versions/: 3215f10b1e0a_create_categories_and_products_tables.py
app/migrations/versions/: 0b73e2dca713_add_orders_and_order_items.py  254cf3d7ec00_add_review_model.py  6be2ea1adfb0_initial_migration_for_postgresql.py  7e2c84c777c8_add_user_model.py  81ebc49d33de_rating_defaults_2.py  8e84ba83f3c0_create_search_vector.py  9587c063d2df_rating_defaults_3.py  a5c0a90850eb_create_cart.py  d5651083d1eb_rating_defaults_4.py  df2bd9ca6457_rating_defaults.py
app/models/: __init__.py  cart_items.py  categories.py  dummy.py  orders.py  products.py  reviews.py  users.py
app/routers/: cart.py  categories.py  dummy.py  orders.py  products.py  reviews.py  users.py
