[project]
name = "stepic-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "greenlet>=3.3.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]


[project.scripts]
main = "app:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"
